--- a/activity.html
+++ b/activity.html
@@ -34,7 +34,7 @@
                     <a href="detailsCreators.html">creator details</a>
                 </div>
             </div>
-            <a href="activity.html" class="activity">activity</a>
+            <a href="" class="activity">activity</a>
             <div class="dropdownMenu">
                 <button class="dropBtnMenu">page +</button>
                 <div class="dropdown">
@@ -47,7 +47,16 @@
                     <a href="404Errors.html">404 error</a>
                 </div>
             </div>
-            <a href="blog.html" class="activity">blog</a>
+            <div class="dropdownMenu">
+                <button class="dropBtnMenu">blog +</button>
+                <div class="dropdown">
+                    <a href="blog.html">blog</a>
+                    <a href="">blog grid</a>
+                    <a href="">blog left sidebar</a>
+                    <a href="">blog right sidebar</a>
+                    <a href="">blog details</a>
+                </div>
+            </div>
             <a href="" class="contactUs">contact us</a>
         </div>
 
@@ -102,13 +111,13 @@
                         <ul>
                             <li><a href="showcase.html">explore artworks</a></li>
                             <li><a href="details.html">explore details</a></li>
-                            <li><a href="allCreator.html">explore creator</a></li>
+                            <li><a href="">explore creator</a></li>
                             <li><a href="detailsCreators.html">explore details</a></li>
                         </ul>
                     </div>
                 </li>
                 <li>
-                    <h3><a href="activity.html">activity</a></h3>
+                    <h3><a href="">activity</a></h3>
                 </li>
                 <li>
                     <h3><a href="">page</a><i class="fas fa-chevron-down droped3" id="droped3"></i></h3>
@@ -125,7 +134,16 @@
                     </div>
                 </li>
                 <li>
-                    <h3><a href="blog.html">blog</a> <i class="fas fa-chevron-down droped4" id="droped4"></i></h3>
+                    <h3><a href="">blog</a> <i class="fas fa-chevron-down droped4" id="droped4"></i></h3>
+                    <div class="navigator4">
+                        <ul>
+                            <li><a href="blog.html">blog</a></li>
+                            <li><a href="">blog grid</a></li>
+                            <li><a href="">blog left sidebar</a></li>
+                            <li><a href="">blog right sidebar</a></li>
+                            <li><a href="">blog details</a></li>
+                        </ul>
+                    </div>
                 </li>
                 <li>
                     <h3><a href="">contact us</a></h3>
@@ -136,178 +154,128 @@
 
     <div class="showcaseBanner" id="showcaseBanner">
         <div class="content">
-            <h1>explore artworks</h1>
-            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>explore</p>
+            <h1>activity</h1>
+            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>activity</p>
         </div>
     </div>
 
-    <section class="categories" id="categories">
-        <div class="filtering">
-            <div class="categoryBox">
+    <section class="activityList" style="margin-top: 100px;">
+        <div class="activity">
+            <div class="cards">
                 <ul>
-                    <li>category</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
+                    <li>
+                        <div class="imgBox">
+                            <img src="img/activity1.jpg" alt="">
+                        </div>
+                    </li>
+                    <li>
+                        <h1>deep sea phantasy</h1> <br>
+                        <p>10 editions listed by Shahzaib Bits for 2.50 ETH each</p><br>
+                        <h6>At 2:30 PM on 19th June, 2021</h6>
+                    </li>
+                    <li><i class="fas fa-shopping-cart"></i></li>
                 </ul>
             </div>
-            <div class="categoryBox">
+            <div class="cards">
                 <ul>
-                    <li>sort by</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
+                    <li>
+                        <div class="imgBox">
+                            <img src="img/activity1.jpg" alt="">
+                        </div>
+                    </li>
+                    <li>
+                        <h1>deep sea phantasy</h1> <br>
+                        <p>10 editions listed by Shahzaib Bits for 2.50 ETH each</p><br>
+                        <h6>At 2:30 PM on 19th June, 2021</h6>
+                    </li>
+                    <li><i class="fas fa-shopping-cart"></i></li>
                 </ul>
             </div>
-            <div class="categoryBox inputForms">
-                <input type="text" placeholder="search here"><i class="fas fa-search"></i>
+            <div class="cards">
+                <ul>
+                    <li>
+                        <div class="imgBox">
+                            <img src="img/activity1.jpg" alt="">
+                        </div>
+                    </li>
+                    <li>
+                        <h1>deep sea phantasy</h1> <br>
+                        <p>10 editions listed by Shahzaib Bits for 2.50 ETH each</p><br>
+                        <h6>At 2:30 PM on 19th June, 2021</h6>
+                    </li>
+                    <li><i class="fas fa-shopping-cart"></i></li>
+                </ul>
+            </div>
+            <div class="cards">
+                <ul>
+                    <li>
+                        <div class="imgBox">
+                            <img src="img/activity1.jpg" alt="">
+                        </div>
+                    </li>
+                    <li>
+                        <h1>deep sea phantasy</h1> <br>
+                        <p>10 editions listed by Shahzaib Bits for 2.50 ETH each</p><br>
+                        <h6>At 2:30 PM on 19th June, 2021</h6>
+                    </li>
+                    <li><i class="fas fa-shopping-cart"></i></li>
+                </ul>
+            </div>
+            <div class="cards">
+                <ul>
+                    <li>
+                        <div class="imgBox">
+                            <img src="img/activity1.jpg" alt="">
+                        </div>
+                    </li>
+                    <li>
+                        <h1>deep sea phantasy</h1> <br>
+                        <p>10 editions listed by Shahzaib Bits for 2.50 ETH each</p><br>
+                        <h6>At 2:30 PM on 19th June, 2021</h6>
+                    </li>
+                    <li><i class="fas fa-shopping-cart"></i></li>
+                </ul>
+            </div>
+            <div class="cards">
+                <ul>
+                    <li>
+                        <div class="imgBox">
+                            <img src="img/activity1.jpg" alt="">
+                        </div>
+                    </li>
+                    <li>
+                        <h1>deep sea phantasy</h1> <br>
+                        <p>10 editions listed by Shahzaib Bits for 2.50 ETH each</p><br>
+                        <h6>At 2:30 PM on 19th June, 2021</h6>
+                    </li>
+                    <li><i class="fas fa-shopping-cart"></i></li>
+                </ul>
+            </div>
+            <div class="cards">
+                <ul>
+                    <li>
+                        <div class="imgBox">
+                            <img src="img/activity1.jpg" alt="">
+                        </div>
+                    </li>
+                    <li>
+                        <h1>deep sea phantasy</h1> <br>
+                        <p>10 editions listed by Shahzaib Bits for 2.50 ETH each</p><br>
+                        <h6>At 2:30 PM on 19th June, 2021</h6>
+                    </li>
+                    <li><i class="fas fa-shopping-cart"></i></li>
+                </ul>
             </div>
         </div>
-    </section>
-
-    <section class="featured featured2" id="featured">
-
-        <div class="featuredContent">
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user1.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user2.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user3.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user4.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user5.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user6.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
+        <div class="sideActivity">
+            <ul>
+                <li>listing</li>
+                <li>likes</li>
+                <li>sales</li>
+                <li>following</li>
+                <li>recents</li>
+                <li>transfers</li>
+            </ul>
         </div>
     </section>
 
@@ -335,6 +303,7 @@
             <input type="text" placeholder="enter your emails address"><button>subscribe now</button>
         </div>
     </section>
+
 
     <section class="footer">
         <div class="box1">
@@ -434,6 +403,12 @@
     </section>
 
 
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
