--- a/allCreator.html
+++ b/allCreator.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <title>Document</title>
+    <title>NFT Websites</title>
 </head>
 
 <body>
@@ -22,41 +22,32 @@
                 <button class="dropBtnMenu">home +</button>
                 <div class="dropdown">
                     <a href="index.html">home style 1</a>
-                    <a href="">home style 2</a>
+                    <a href="home2.html">home style 2</a>
                 </div>
             </div>
             <div class="dropdownMenu">
                 <button class="dropBtnMenu">explore +</button>
                 <div class="dropdown">
-                    <a href="">explore artworks</a>
-                    <a href="">explore details</a>
-                    <a href="">explore creator</a>
-                    <a href="">creator details</a>
+                    <a href="showcase.html">explore artworks</a>
+                    <a href="exploredDetails.html">explore details</a>
+                    <a href="allCreator.html">explore creator</a>
+                    <a href="detailsCreators.html">creator details</a>
                 </div>
             </div>
-            <a href="" class="activity">activity</a>
+            <a href="activity.html" class="activity">activity</a>
             <div class="dropdownMenu">
                 <button class="dropBtnMenu">page +</button>
                 <div class="dropdown">
-                    <a href="">about us</a>
-                    <a href="">team</a>
-                    <a href="">pricing plane</a>
-                    <a href="">upload</a>
-                    <a href="">upload full</a>
-                    <a href="">faq</a>
-                    <a href="">404 error</a>
+                    <a href="about.html">about us</a>
+                    <a href="team.html">team</a>
+                    <a href="pricing.html">pricing plane</a>
+                    <a href="upload.html">upload</a>
+                    <a href="uploadFull.html">upload full</a>
+                    <a href="faQ.html">faq</a>
+                    <a href="404Errors.html">404 error</a>
                 </div>
             </div>
-            <div class="dropdownMenu">
-                <button class="dropBtnMenu">blog +</button>
-                <div class="dropdown">
-                    <a href="">blog</a>
-                    <a href="">blog grid</a>
-                    <a href="">blog left sidebar</a>
-                    <a href="">blog right sidebar</a>
-                    <a href="">blog details</a>
-                </div>
-            </div>
+            <a href="blog.html" class="activity">blog</a>
             <a href="" class="contactUs">contact us</a>
         </div>
 
@@ -100,8 +91,8 @@
                     <h3><a href="">home</a> <i class="fas fa-chevron-down droped" id="droped"></i></h3>
                     <div class="navigator">
                         <ul>
-                            <li><a href="">home v1</a></li>
-                            <li><a href="">home v2</a></li>
+                            <li><a href="index.html">home v1</a></li>
+                            <li><a href="home2.html">home v2</a></li>
                         </ul>
                     </div>
                 </li>
@@ -109,41 +100,32 @@
                     <h3><a href="">explore</a> <i class="fas fa-chevron-down droped2" id="droped2"></i></h3>
                     <div class="navigator2">
                         <ul>
-                            <li><a href="">explore artworks</a></li>
-                            <li><a href="">explore details</a></li>
-                            <li><a href="">explore creator</a></li>
-                            <li><a href="">explore details</a></li>
+                            <li><a href="showcase.html">explore artworks</a></li>
+                            <li><a href="details.html">explore details</a></li>
+                            <li><a href="allCreator.html">explore creator</a></li>
+                            <li><a href="detailsCreators.html">explore details</a></li>
                         </ul>
                     </div>
                 </li>
                 <li>
-                    <h3><a href="">activity</a></h3>
+                    <h3><a href="activity.html">activity</a></h3>
                 </li>
                 <li>
                     <h3><a href="">page</a><i class="fas fa-chevron-down droped3" id="droped3"></i></h3>
                     <div class="navigator3">
                         <ul>
-                            <li><a href="">about us</a></li>
-                            <li><a href="">team</a></li>
-                            <li><a href="">pricing plane</a></li>
-                            <li><a href="">upload</a></li>
-                            <li><a href="">upload full</a></li>
-                            <li><a href="">faq</a></li>
-                            <li><a href="">404 error</a></li>
+                            <li><a href="about.html">about us</a></li>
+                            <li><a href="team.html">team</a></li>
+                            <li><a href="pricing.html">pricing plane</a></li>
+                            <li><a href="upload.html">upload</a></li>
+                            <li><a href="uploadFull.html">upload full</a></li>
+                            <li><a href="faQ.html">faq</a></li>
+                            <li><a href="404Errors.html">404 error</a></li>
                         </ul>
                     </div>
                 </li>
                 <li>
-                    <h3><a href="">blog</a> <i class="fas fa-chevron-down droped4" id="droped4"></i></h3>
-                    <div class="navigator4">
-                        <ul>
-                            <li><a href="">blog</a></li>
-                            <li><a href="">blog grid</a></li>
-                            <li><a href="">blog left sidebar</a></li>
-                            <li><a href="">blog right sidebar</a></li>
-                            <li><a href="">blog details</a></li>
-                        </ul>
-                    </div>
+                    <h3><a href="blog.html">blog</a> <i class="fas fa-chevron-down droped4" id="droped4"></i></h3>
                 </li>
                 <li>
                     <h3><a href="">contact us</a></h3>
@@ -154,8 +136,8 @@
 
     <div class="showcaseBanner" id="showcaseBanner">
         <div class="content">
-            <h1>explore artworks</h1>
-            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>explore</p>
+            <h1>creators</h1>
+            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>creators</p>
         </div>
     </div>
 
@@ -180,16 +162,6 @@
     </section>
 
     <section class="topCreators">
-        <div class="title">
-            <ul>
-                <li>
-                    <h3>top creators</h3>
-                </li>
-                <li>
-                    <a href="allCreator.html" class="btnFill">view all creators</a>
-                </li>
-            </ul>
-        </div>
 
         <div class="contentCreators">
             <div class="cards">
@@ -521,7 +493,7 @@
     </section>
 
     <section class="copyright">
-        <p>Build With Love By Nuryana N</p>
+        <p>Build With Love By N-Dev</p>
     </section>
 
 
