--- a/exploredDetails.html
+++ b/exploredDetails.html
@@ -133,195 +133,73 @@
             </ul>
         </div>
     </nav>
-
     <div class="showcaseBanner" id="showcaseBanner">
         <div class="content">
-            <h1>explore artworks</h1>
-            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>explore</p>
+            <h1>explore details</h1>
+            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>explore details</p>
         </div>
     </div>
 
-    <section class="categories" id="categories">
-        <div class="filtering">
-            <div class="categoryBox">
+    <section class="details">
+        <div class="images">
+            <img src="img/details1.jpg" alt="">
+            <div class="popUpBar">
                 <ul>
-                    <li>category</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
+                    <li>details</li>
+                    <li>bids</li>
+                    <li>history</li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis molestiae fugit id. Veritatis
+                    doloremque culpa dolorem excepturi atque fuga officiis ab iusto, harum quia quod! Doloribus
+                    tempora repudiandae nihil veritatis!</p>
+            </div>
+            <div class="detailsOwner">
+                <ul>
+                    <li><img src="img/user1.jpg" alt=""></li>
+                    <li>
+                        <p>owner</p><br> <span>meow bitas</span>
+                    </li>
                 </ul>
             </div>
-            <div class="categoryBox">
-                <ul>
-                    <li>sort by</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                </ul>
+            <div class="bio">
+                <table>
+                    <tr>
+                        <td>contact address :</td>
+                        <td>nuryana146@gmail.com</td>
+                    </tr>
+                    <tr>
+                        <td>Token ID :</td>
+                        <td> 012452358I45</td>
+                    </tr>
+                    <tr>
+                        <td>Category :</td>
+                        <td>Ethereum (ETH)</td>
+                    </tr>
+                    <tr>
+                        <td>Size :</td>
+                        <td>1020 x 1000 px.VIDEO (12.05MB)</td>
+                    </tr>
+                </table>
             </div>
-            <div class="categoryBox inputForms">
-                <input type="text" placeholder="search here"><i class="fas fa-search"></i>
-            </div>
+        </div>
+        <div class="contentText">
+            <h1>ID: #009 Colorful Abstract Painting Cat Wid BaLoon</h1>
+            <h2>NFT: Size 1/50</h2>
+            <h3>ENDS IN:</h3>
+            <h4>206d 23h 38m 32s</h4>
+            <h3>PRICE</h3>
+            <h5><i class="fab fa-bitcoin"></i> 2.29 ETH ($ 6,227.15)</h5>
+            <ul class="buttonDetails">
+                <li><a href="allArts.html" class="btnFill">buy now</a></li>
+                <li><a href="allArts.html" class="btnFill">place a bid</a></li>
+            </ul>
         </div>
     </section>
 
-    <section class="featured featured2" id="featured">
 
-        <div class="featuredContent">
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user1.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user2.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user3.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user4.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user5.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user6.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
 
-    <ul class="pagination">
-        <li><i class="fas fa-chevron-left"></i></li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li><i class="fas fa-chevron-right"></i></li>
-    </ul>
 
-    <section class="subscribe">
+    <section class="subscribe subscribe2">
         <div class="contentNews">
             <ul>
                 <li><img src="img/subscribe.png" alt=""></li>
@@ -434,6 +312,12 @@
     </section>
 
 
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
