--- a/home2.html
+++ b/home2.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <a href="blog.html" class="activity">blog</a>
-            <a href="contact.html" class="contactUs">contact us</a>
+            <a href="" class="contactUs">contact us</a>
         </div>
 
         <div class="searchUserBtn">
@@ -128,34 +128,23 @@
                     <h3><a href="blog.html">blog</a> <i class="fas fa-chevron-down droped4" id="droped4"></i></h3>
                 </li>
                 <li>
-                    <h3><a href="contact.html">contact us</a></h3>
+                    <h3><a href="">contact us</a></h3>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <section class="banner">
+    <section class="banner2">
         <div class="content">
-            <h1>Discover digital art and</h1>
-            <h2>collect nft</h2>
-            <p>raroin is a shared liquidity NFT market smart contract which is used by multiple websites to provide the
-                users the best possible experience.</p>
-            <div class="btn">
-                <ul>
-                    <li>
-                        <a href="#bannerBottom" class="btnFill">explore now</a>
-                    </li>
-                    <li>
-                        <a href="" class="btnNoFill">place a bid</a>
-                    </li>
 
-                </ul>
+            <h1>Find Your Dream Digital Art And Collect NFT</h1>
+            <p>Raroin is a shared liquidity NFT market smart contract which is
+            </p>
+            <div class="searchBox">
+                <input type="text" placeholder="search here">
+                <span class="icon"><i class="fas fa-search"></i></span>
             </div>
-        </div>
-        <div class="imagesBox">
-            <div class="images">
-                <img src="img/hero.png" alt="">
-            </div>
+
         </div>
     </section>
 
