--- a/detailsCreators.html
+++ b/detailsCreators.html
@@ -134,57 +134,43 @@
         </div>
     </nav>
 
+
     <div class="showcaseBanner" id="showcaseBanner">
         <div class="content">
-            <h1>explore artworks</h1>
-            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>explore</p>
+            <h1>creator details</h1>
+            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>explore details</p>
         </div>
     </div>
 
-    <section class="categories" id="categories">
-        <div class="filtering">
-            <div class="categoryBox">
-                <ul>
-                    <li>category</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                </ul>
-            </div>
-            <div class="categoryBox">
-                <ul>
-                    <li>sort by</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                </ul>
-            </div>
-            <div class="categoryBox inputForms">
-                <input type="text" placeholder="search here"><i class="fas fa-search"></i>
-            </div>
+    <section class="featured" id="featured">
+        <div class="title">
+            <ul>
+                <li>
+                    <h3>featured arts</h3>
+                </li>
+                <li>
+                    <a href="allArts.html" class="btnFill">view all explore</a>
+                </li>
+            </ul>
         </div>
-    </section>
 
-    <section class="featured featured2" id="featured">
-
-        <div class="featuredContent">
+        <div class="featuredContent featuredContent2">
             <div class="cards">
                 <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
+                    <img src="img/user1.jpg" alt="">
                 </div>
                 <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user1.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
+                    <h3>rehman ahmad</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni repudiandae optio at
+                        repellendus sit totam iste repellat accusamus. Exercitationem quod voluptatem a magni
+                        tempora sit corporis illo dolorem voluptatum reiciendis?</p>
+                    <p class="read">read more</p>
+                    <button class="btnFill">follow</button>
+                    <ul class="sciIconList">
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-linkedin"></i></li>
                     </ul>
                 </div>
             </div>
@@ -311,17 +297,9 @@
         </div>
     </section>
 
-    <ul class="pagination">
-        <li><i class="fas fa-chevron-left"></i></li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li><i class="fas fa-chevron-right"></i></li>
-    </ul>
 
-    <section class="subscribe">
+
+    <section class="subscribe subscribe2">
         <div class="contentNews">
             <ul>
                 <li><img src="img/subscribe.png" alt=""></li>
@@ -434,6 +412,12 @@
     </section>
 
 
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
