--- a/pricing.html
+++ b/pricing.html
@@ -136,190 +136,58 @@
 
     <div class="showcaseBanner" id="showcaseBanner">
         <div class="content">
-            <h1>explore artworks</h1>
-            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>explore</p>
+            <h1>our pricing plane</h1>
+            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>pricing plane</p>
         </div>
     </div>
 
-    <section class="categories" id="categories">
-        <div class="filtering">
-            <div class="categoryBox">
-                <ul>
-                    <li>category</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                </ul>
-            </div>
-            <div class="categoryBox">
-                <ul>
-                    <li>sort by</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                </ul>
-            </div>
-            <div class="categoryBox inputForms">
-                <input type="text" placeholder="search here"><i class="fas fa-search"></i>
-            </div>
-        </div>
-    </section>
-
-    <section class="featured featured2" id="featured">
-
-        <div class="featuredContent">
+    <section class="pricing">
+        <div class="content">
             <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
+                <div class="cardsHead">
+                    <h4>basic</h4>
+                    <h1><sub>$</sub>13.29</h1>
+                    <h5>per month</h5>
                 </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user1.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
+                <div class="cardsBody">
+                    <p>Limited install</p>
+                    <p>Unlimited Download</p>
+                    <p>Free One Year Support</p>
+                    <p>Free 15 GB Linux Hosting</p>
+                    <button class="btnFill">chose plan</button>
                 </div>
             </div>
             <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
+                <div class="cardsHead">
+                    <h4>standard</h4>
+                    <h1><sub>$</sub>59.99</h1>
+                    <h5>per month</h5>
                 </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user2.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
+                <div class="cardsBody">
+                    <p>Limited install</p>
+                    <p>Unlimited Download</p>
+                    <p>Free One Year Support</p>
+                    <p>Free 15 GB Linux Hosting</p>
+                    <button class="btnFill">chose plan</button>
                 </div>
             </div>
             <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
+                <div class="cardsHead">
+                    <h4>premium</h4>
+                    <h1><sub>$</sub>99.99</h1>
+                    <h5>per month</h5>
                 </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user3.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user4.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user5.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
-                    </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user6.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
-                    </ul>
+                <div class="cardsBody">
+                    <p>Limited install</p>
+                    <p>Unlimited Download</p>
+                    <p>Free One Year Support</p>
+                    <p>Free 15 GB Linux Hosting</p>
+                    <button class="btnFill">chose plan</button>
                 </div>
             </div>
         </div>
     </section>
 
-    <ul class="pagination">
-        <li><i class="fas fa-chevron-left"></i></li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li><i class="fas fa-chevron-right"></i></li>
-    </ul>
 
     <section class="subscribe">
         <div class="contentNews">
@@ -335,6 +203,7 @@
             <input type="text" placeholder="enter your emails address"><button>subscribe now</button>
         </div>
     </section>
+
 
     <section class="footer">
         <div class="box1">
@@ -434,6 +303,12 @@
     </section>
 
 
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
