--- a/team.html
+++ b/team.html
@@ -133,193 +133,108 @@
             </ul>
         </div>
     </nav>
-
     <div class="showcaseBanner" id="showcaseBanner">
         <div class="content">
-            <h1>explore artworks</h1>
-            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>explore</p>
+            <h1>our team members</h1>
+            <p>home <i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i>team</p>
         </div>
     </div>
 
-    <section class="categories" id="categories">
-        <div class="filtering">
-            <div class="categoryBox">
-                <ul>
-                    <li>category</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                </ul>
-            </div>
-            <div class="categoryBox">
-                <ul>
-                    <li>sort by</li>
-                    <li><i class="fas fa-chevron-down"></i></li>
-                </ul>
-            </div>
-            <div class="categoryBox inputForms">
-                <input type="text" placeholder="search here"><i class="fas fa-search"></i>
-            </div>
-        </div>
-    </section>
-
-    <section class="featured featured2" id="featured">
-
-        <div class="featuredContent">
+    <section class="team">
+        <div class="content">
             <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
+                <div class="images">
+                    <img src="img/team1.jpg" alt="">
+                    <div class="userName">
+                        <h3>adam smith</h3>
+                        <p>president & ceo</p>
                     </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user1.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
+                    <ul class="sci">
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-linkedin"></i></li>
                     </ul>
                 </div>
             </div>
             <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
+                <div class="images">
+                    <img src="img/team2.jpg" alt="">
+                    <div class="userName">
+                        <h3>ACD Smith</h3>
+                        <p>president & ceo</p>
                     </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user2.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
+                    <ul class="sci">
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-linkedin"></i></li>
                     </ul>
                 </div>
             </div>
             <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
+                <div class="images">
+                    <img src="img/team3.jpg" alt="">
+                    <div class="userName">
+                        <h3>Marina Mojo</h3>
+                        <p>president & ceo</p>
                     </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user3.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
+                    <ul class="sci">
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-linkedin"></i></li>
                     </ul>
                 </div>
             </div>
             <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
+                <div class="images">
+                    <img src="img/team4.jpg" alt="">
+                    <div class="userName">
+                        <h3>Ayoub Fennouni</h3>
+                        <p>president & ceo</p>
                     </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user4.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
+                    <ul class="sci">
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-linkedin"></i></li>
                     </ul>
                 </div>
             </div>
             <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
+                <div class="images">
+                    <img src="img/team5.jpg" alt="">
+                    <div class="userName">
+                        <h3>Mark Linomi</h3>
+                        <p>president & ceo</p>
                     </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user5.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
+                    <ul class="sci">
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-linkedin"></i></li>
                     </ul>
                 </div>
             </div>
             <div class="cards">
-                <div class="imgBox">
-                    <img src="img/2.jpg" alt="">
-                    <div class="likes">
-                        <i class="fas fa-heart"></i>1.2k
+                <div class="images">
+                    <img src="img/team6.jpg" alt="">
+                    <div class="userName">
+                        <h3>Amira Yerden</h3>
+                        <p>president & ceo</p>
                     </div>
-                </div>
-                <div class="content">
-                    <h3>colorfull abstract painting</h3>
-                    <ul class="owner">
-                        <li><img src="img/user6.jpg" alt=""></li>
-                        <li><span>owned by</span><br>
-                            <h3><a href="">meow bits</a></h3>
-                        </li>
-                        <li><span>current bid</span><br>
-                            <h3>4.89 eth</h3>
-                        </li>
-                    </ul>
-                    <ul class="bid">
-                        <li><span><i class="fas fa-shopping-bag"></i> place a bid</span></li>
-                        <li><i class="fas fa-history"></i><a href="">view history</a></li>
+                    <ul class="sci">
+                        <li><i class="fab fa-facebook"></i></li>
+                        <li><i class="fab fa-twitter"></i></li>
+                        <li><i class="fab fa-instagram"></i></li>
+                        <li><i class="fab fa-linkedin"></i></li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <ul class="pagination">
-        <li><i class="fas fa-chevron-left"></i></li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li><i class="fas fa-chevron-right"></i></li>
-    </ul>
 
     <section class="subscribe">
         <div class="contentNews">
@@ -335,6 +250,7 @@
             <input type="text" placeholder="enter your emails address"><button>subscribe now</button>
         </div>
     </section>
+
 
     <section class="footer">
         <div class="box1">
@@ -434,6 +350,12 @@
     </section>
 
 
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
